--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Milton, John, 1608-1674 -- Anniversaries, etc.'
 - !lcsh 'Milton, John, 1608-1674 -- Criticism and interpretation'
 - !lcc 'PR'
+- GITenberg
 title: "Milton's Tercentenary\r\nAn address delivered before the Modern Language Club\
   \ of Yale University on Milton's Three Hundredth Birthday."
 url: http://www.gutenberg.org/ebooks/33248
